raffia/tests/error/qualified-rule/invalid-block.snap
---
source: raffia/tests/error.rs
---
error: unexpected whitespace or comments
  ┌─ invalid-block.css:1:7
  │
1 │ color: green;
  │       ^


